# rishabh-singh-manufac-fast-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
manufac_assignment/: main.py
manufac_assignment/api/: v1.py
manufac_assignment/models/: price.py
manufac_assignment/services/: price_service.py
manufac_assignment/utils/: data_loader.py
