[tool.poetry]
name = "manufac-assignment"
version = "0.1.0"
description = "India Metro Fuel-Price Time-Series API using FastAPI and Pandas"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.110.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"